# FormulationOS

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo_capability_aware.py  demo_gpt_planner.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
docker/: README.md  deploy.sh  docker-compose.yml  test_apis.sh
docs/: architecture.md  capability_taxonomy.md  demo_scenarios.md  discussion.md  discussion_checklist.md  honest_assessment.md  ouyang_platforms_summary.md  phase_2_final_summary.md  phase_2_reflection.md  research_plan.md  streamlit_guide.md  sts_specification.md  system_design.md  tool_author_guide.md
docs/maturity/: ouyang_platforms.md
docs/memory/: 2026-07-01.md  2026-07-03.md  2026-07-07.md
docs/research_notes/: README.md  formulation_dt_adapter.md  scientific_model_integration_matrix.md  supervisor_discussion.md
paper/: README.md  outline.md  slogan.md
paper/abstracts/: v1.md
paper/experiments/: plan.md
paper/figures/: README.md
paper/sections/: 01_introduction.md  02_related_work.md  03_scientific_workflow_abstraction.md  04_formulationos_architecture.md  05_sts_extension_schema.md  06_implementation.md  07_evaluation.md  08_discussion.md
src/formulation_os/: __init__.py
tests/: __init__.py  conftest.py
tests/smoke/: __init__.py  test_end_to_end.py
tests/test_core/: __init__.py  test_executor_python.py  test_tool.py  test_tool_spec.py
tests/test_llm/: test_client.py
tests/test_orchestrator/: test_orchestrator.py  test_workflow_orchestrator.py
tests/test_planner/: __init__.py  test_llm_planner.py  test_rule_based_planner.py  test_workflow_planner.py  test_workflow_validator.py
tests/test_registry/: __init__.py  test_tool_registry.py
(+64 files in other folders)
